# drug-cell-viz

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: config.py  db.py  events.py  main.py  telemetry.py
apps/api/src/api/ml/: __init__.py  alphamissense.py  features.py  infer.py  infer_brca2.py  train.py  train_brca2.py
apps/api/src/api/ml/data/: alphamissense_brca1.tsv
apps/api/src/api/ml/models/: brca1_ensemble_v1.json  brca1_xgb_v1.json  brca1_xgb_v1_metadata.json  brca2_xgb_v1.json  brca2_xgb_v1_metadata.json
apps/api/src/api/models/: __init__.py  analysis.py  job.py  molecular.py  morphology.py  patient.py  screening.py
apps/api/src/api/routes/: __init__.py  bc.py  brca1.py  brca2.py  export.py  hrd_scars.py  jobs.py  molecular.py  morphology.py  patients.py  radiogenomics.py  screening.py  vcf.py
apps/api/src/api/services/: __init__.py  alphafold.py  analysis.py  bc_catalog.py  brca_exchange.py  catalog_data.py  docking.py  hrd.py  hrd_scars.py  morphology.py  pdf_report.py  plain_language.py  pocket.py  radiogenomics.py  screening.py  storage.py  variants.py  vcf.py
apps/api/src/api/workers/: settings.py  tasks.py
apps/api/tests/: conftest.py  test_analyze_stream.py  test_brca1_classifier.py  test_brca2_classifier.py  test_current_drug_assessment.py  test_docking_stub.py  test_hrd.py  test_hrd_scars.py  test_morphology.py  test_pdf_report.py  test_pipeline.py  test_plain_language.py  test_radiogenomics.py  test_relevance_check.py  test_screening.py  test_variants.py  test_vcf.py
apps/api/tests/fixtures/: test_sample.vcf
apps/web/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/demo/: page.tsx
apps/web/app/patient/[id]/: page.tsx
apps/web/app/results/[patientId]/: page.tsx
apps/web/app/screen/: page.tsx
apps/web/app/walkthrough/[patientId]/: page.tsx
apps/web/components/: AnalysisResultPanel.tsx  BCAnalysisForm.tsx  Brca1FunctionCard.tsx  CellGrid.tsx  CurrentDrugAssessmentCard.tsx  DemoPatientPicker.tsx  DoctorVisitPdfButton.tsx  DrugInputForm.tsx  HrdCard.tsx  JobStatus.tsx  MolViewer.tsx  MolViewerInner.tsx  MolecularPanel.tsx  MorphologyPanel.tsx  PlainLanguageExplainer.tsx  ResultsReport.tsx  StatusBadge.tsx  VolumeViewer.tsx  VolumeViewerInner.tsx
apps/web/lib/: api.ts  bc-types.ts  twenty-three-and-me.ts  types.ts
docs/: research-roadmap.md
fixtures/patients/: README.md  patient_capecitabine_risk.vcf  patient_diana_cyp2d6.vcf  patient_maya_brca1.vcf  patient_null.vcf
infra/modal/: diffdock_fn.py  requirements.txt
infra/terraform/gcp/: .gitignore  README.md  cloud_run_api.tf  cloud_sql.tf  main.tf  memorystore.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
pipelines/: README.md  Snakefile  config.yaml
pipelines/rules/: fastq_to_vcf.smk  genome_graph_sv.smk
pipelines/scripts/: classify.py  extract_hrd_features.py  filter_catalog.py  normalize.py  render_text.py  run_bwa_gatk.sh  run_minigraph_sv.sh  run_parabricks.sh  run_vg_sv.sh  score_hrd_scars.py
scripts/: build_faiss_index.py  download_jump_subset.py  filter_wgs_to_hr_panel.sh  generate_ts_types.sh
scripts/gnomad/: README.md  brca1_vus_eval.py  extract_hr_panel.sh  synthesize_patient.py  validate_catalog.py
