[project]
name = "api"
version = "0.1.0"
description = "drug-cell-viz FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "redis>=5.2",
    "httpx>=0.27",
    "arq>=0.26",
    "rdkit>=2024.3.5",
    "biopython>=1.83",
    "numpy>=1.26",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.12",
    # BRCA1 variant effect classifier (Tier-3). Trained on Findlay et al. 2018
    # saturation genome editing functional scores. Inference needs xgboost;
    # training needs scikit-learn and pandas too. Kept in runtime deps so the
    # model loads at API startup.
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "openpyxl>=3.1",  # training-time: read Findlay supplementary .xlsx
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
    "httpx>=0.27",
]
modal = [
    "modal>=0.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["api"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rdkit.*", "Bio.*", "arq.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
