[project]
name = "api"
version = "0.1.0"
description = "drug-cell-viz FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "redis>=5.2",
    "httpx>=0.27",
    "arq>=0.26",
    "rdkit>=2024.3.5",
    "biopython>=1.83",
    "numpy>=1.26",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.12",
    # BRCA1 variant effect classifier (Tier-3). Trained on Findlay et al. 2018
    # saturation genome editing functional scores. Inference needs xgboost;
    # training needs scikit-learn and pandas too. Kept in runtime deps so the
    # model loads at API startup.
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "openpyxl>=3.1",  # training-time: read Findlay supplementary .xlsx
    # Clinical-grade VCF ingestion. cyvcf2 wraps htslib; wheels ship for
    # manylinux + macOS arm64 so CI and Render builds don't need a system
    # bcftools install at API runtime.
    "cyvcf2>=0.31",
    # PDF export for doctor-visit report (cf. /api/bc/report.pdf). reportlab
    # is pure-Python, no system deps, wheel ships on all platforms.
    "reportlab>=4.0",
    # RabbitMQ event bus (async). We publish `analysis.completed` events so
    # downstream audit / notification consumers can subscribe without
    # coupling to the API's Postgres write path. Optional at runtime — if
    # RABBITMQ_URL is unset, publishes are no-ops.
    "aio-pika>=9.4",
    # Observability. OpenTelemetry traces the FastAPI + SQLAlchemy stack;
    # Logfire is a drop-in OTel-compatible sink (Pydantic-flavored) when a
    # LOGFIRE_TOKEN is available, otherwise we export to the console.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    # Radiogenomics: CT-scan ingestion + preprocessing. pydicom parses DICOM
    # series (the standard hospital export), nibabel parses NIfTI (the
    # research-standard volumetric format), scipy.ndimage handles the
    # resample-to-fixed-shape step. We intentionally do NOT pull MONAI or
    # torch here; heavyweight 3D-transform stack + the trained model live in
    # the hrd-radiogenomics research repo. This backend only does enough to
    # show the preprocessed volume and forward it to whichever inference
    # endpoint is currently wired up.
    "pydicom>=2.4",
    "nibabel>=5.2",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
    "httpx>=0.27",
]
pipeline = [
    "snakemake>=8.0",
]
modal = [
    "modal>=0.64",
]
# Enable this extra when a trained radiogenomics checkpoint is deployed
# (MODEL_WEIGHTS_PATH set to a .pt file produced by the hrd-radiogenomics
# pipeline). Without it, services.radiogenomics stays on the stub path.
radiogenomics = [
    "torch>=2.2",
    "monai>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["api"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rdkit.*", "Bio.*", "arq.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
